done-no responsive

--- a/about-ourstory.html
+++ b/about-ourstory.html
@@ -28,11 +28,11 @@
                                 <a href="">About</a>
                                 <div class="icon-menu"></div>
                                 <ul class="about">
-                                    <li ><a href="about-ourstory.html">Our Story</a></li>
+                                    <li><a href="about-ourstory.html">Our Story</a></li>
                                     <li ><a href="about-ourteam.html">Our Team</a></li>
-                                    <li ><a href="#">Our Customers</a></li>
-                                    <li ><a href="#">Our Partners</a></li>
-                                    <li ><a href="#">Why Joyride Coffee</a></li>
+                                    <li ><a href="about-ourcustomers.html">Our Customers</a></li>
+                                    <li ><a href="about-ourpartners.html">Our Partners</a></li>
+                                    <li ><a href="about-whyjoyridecoffee.html">Why Joyride Coffee</a></li>
                                 </ul><!--menu cap 2-->
 
                             </li>
@@ -40,16 +40,16 @@
                                 <a href="#">Service</a>
                                 <div class="icon-menu"></div>
                                 <ul  class="service">
-                                    <li><a href="#">Catering</a></li>
-                                    <li><a href="#">Coffe Dilivery</a></li>
-                                    <li><a href="#">Equipment</a></li>
-                                    <li><a href="#">Service</a></li>
-                                    <li><a href="#">FAQ</a></li>
+                                    <li><a href="service-catering.html">Catering</a></li>
+                                    <li><a href="service-coffeedilivery.html">Coffee Dilivery</a></li>
+                                    <li><a href="service-equipment.html">Equipment</a></li>
+                                    <li><a href="service-service.html">Service</a></li>
+                                    <li><a href="service-faq.html">FAQ</a></li>
                                 </ul><!--menu cap 2-->
                             </li>
                             <li class="top-menu clickable"><a href="#">Coffee</a></li>
                             <li class="top-menu clickable"><a href="contact.html">Contact</a></li>
-                            <li class="top-menu clickable"><a href="#">Blog</a></li>
+                            <li class="top-menu clickable"><a href="blog.html">Blog</a></li>
                             <li class="top-menu clickable"><a href="order.html">Order Coffee</a></li>
                         </ul><!--menu cap 1-->
                     </nav>
@@ -57,31 +57,37 @@
                 <div class="sub-background"></div>  
             </header><!-- /header-->
 
-            <div class="slides-"></div>
-            <div id="banner">
-
+            <div class="slides-overlay"></div>
+            <div class="banner">
                 <img src="img/Our_Story.jpg"/>
-                <div class="wrapper textbanner">
-                    <h2> Our Story </h2>
+                <div class="wrapper text-banner">
+                    <h2>Our Story</h2>
                 </div>
             </div> 
             <div id="content" class="wrapper">
                 <div class="content-left">
-                    <p class="p1">We Love Coffee</p>
+                    <h3>We Love Coffee</h3>
                     <br/>
-                    <p class="p2">We started as the city’s first mobile cafe serving Stumptown Coffee, bringing exceptional coffee and espresso drinks to the streets with the Joyride Truck.</p>
+                    <p>We started as the city’s first mobile cafe serving Stumptown Coffee, bringing exceptional coffee and espresso drinks to the streets with the Joyride Truck.</p>
 					</br>
-					<p class="p2">Now we’re taking our mobile tradition a step further, bringing fresh coffee and cafe quality equipment direct to offices.  We think coffee breaks should be as relaxing, stimulating, and delicious as a trip to any cafe.  Our goal is to provide the best office coffee with the best equipment and superior service..</p>
+					<p>Now we’re taking our mobile tradition a step further, bringing fresh coffee and cafe quality equipment direct to offices.  We think coffee breaks should be as relaxing, stimulating, and delicious as a trip to any cafe.  Our goal is to provide the best office coffee with the best equipment and superior service..</p>
 					</br>
-					<p class="p2"><a href="">    Read about the Joyride team »</a></p>
+					<p><a href="#">Read about the Joyride team »</a></p>
                 </div>
                 <div class="content-right">
-                    <div id="div" class="div1">
-                	   <div class="overlay"></div>
-                        <p id="title" class="title1"><a href="#">SCHEDULE A TASTING</a></p>
-                        <div id="tHover" class="tHover1"><a href="#">Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!</a>
+                    <div class="content-item">
+                        <div class="overlay"></div>
+                        <p class="title">
+                            <a href="#">SCHEDULE A TASTING</a>
+                        </p>
+                        <div class="details hide">
+                            <a href="#">
+                                Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!
+                            </a>
                         </div>
-                        <div id="bHover" class="bHover1"><a>Schedule a Tasting</a></div>      
+                        <div class="action hide">
+                            <a>Schedule a Tasting</a>
+                        </div>      
                         <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
                     </div>
                 </div>
@@ -112,7 +118,7 @@
                         <p>Contact Us at <strong>917.670.3314</strong></p>
                     </div>
                     <p class="copyright">
-                        © Copyright 2012 Joyride Coffee Distributors. Site by
+                        &copy; Copyright 2012 Joyride Coffee Distributors. Site by
                         <a href="http://www.barrelny.com/">Barrel</a>
                     </p>
                 </div>
