--- a/about-ourteam.html
+++ b/about-ourteam.html
@@ -31,9 +31,9 @@
                                 <ul class="about">
                                     <li><a href="about-ourstory.html">Our Story</a></li>
                                     <li ><a href="about-ourteam.html">Our Team</a></li>
-                                    <li ><a href="#">Our Customers</a></li>
-                                    <li ><a href="#">Our Partners</a></li>
-                                    <li ><a href="#">Why Joyride Coffee</a></li>
+                                    <li ><a href="about-ourcustomers.html">Our Customers</a></li>
+                                    <li ><a href="about-ourpartners.html">Our Partners</a></li>
+                                    <li ><a href="about-whyjoyridecoffee.html">Why Joyride Coffee</a></li>
                                 </ul><!--menu cap 2-->
 
                             </li>
@@ -41,16 +41,16 @@
                                 <a href="#">Service</a>
                                 <div class="icon-menu"></div>
                                 <ul  class="service">
-                                    <li><a href="#">Catering</a></li>
-                                    <li><a href="#">Coffe Dilivery</a></li>
-                                    <li><a href="#">Equipment</a></li>
-                                    <li><a href="#">Service</a></li>
-                                    <li><a href="#">FAQ</a></li>
+                                    <li><a href="service-catering.html">Catering</a></li>
+                                    <li><a href="service-coffeedilivery.html">Coffee Dilivery</a></li>
+                                    <li><a href="service-equipment.html">Equipment</a></li>
+                                    <li><a href="service-service.html">Service</a></li>
+                                    <li><a href="service-faq.html">FAQ</a></li>
                                 </ul><!--menu cap 2-->
                             </li>
                             <li class="top-menu"><a href="#">Coffee</a></li>
                             <li class="top-menu"><a href="contact.html">Contact</a></li>
-                            <li class="top-menu"><a href="#">Blog</a></li>
+                            <li class="top-menu"><a href="blog.html">Blog</a></li>
                             <li class="top-menu"><a href="order.html">Order Coffee</a></li>
                         </ul><!--menu cap 1-->
                     </nav>
@@ -59,35 +59,57 @@
             </header><!-- /header-->
 
             <div class="slides-overlay"></div>
-            <div id="banner">
-
+            <div class="banner">
                 <img src="img/Joyride_Coffee_Our_Teamv4.jpg"/>
-                <div class="wrapper textbanner">
-                    <h2> Our Team </h2>
+                <div class="wrapper text-banner">
+                    <h2>Our Team</h2>
                 </div>
             </div> 
             <div id="content" class="wrapper">
                 <div class="content-left">
-                    <p class="p1">We Love Coffee</p>
-                    <br/>
-                    <p class="p2">Joyride is owned and operated by three brothers who drink far too much coffee.  Originally, they ran a mobile café dishing Stumptown coffee on the streets of Manhattan.  Customers often lamented the quality of their own office coffee, and an idea was born: providing amazing office coffee with café-quality equipment and active, engaged service.  Now, Joyride delivers freshly roasted coffee from amazing roasters to offices across the tri-state region. </p>
+                    <h3>We are Joyride</h3>
+                    <p>Joyride is owned and operated by three brothers who drink far too much coffee.  Originally, they ran a mobile café dishing Stumptown coffee on the streets of Manhattan.  Customers often lamented the quality of their own office coffee, and an idea was born: providing amazing office coffee with café-quality equipment and active, engaged service.  Now, Joyride delivers freshly roasted coffee from amazing roasters to offices across the tri-state region.&nbsp</p>
 					</br>
-					<p class="p2">Since the days of the truck, Joyride has grown to include a great group of people.</p>
-					</br></br></br>
-					<p class="p2"><strong>Founders:</strong></p>
-					<p class="p2">▸ <a href="">David Belanich</a></br>▸ <a href="">Adam Belanich</a></br>▸ <a href="">Noah Belanich</a></p>
-					<p class="p2"><strong>Team:</strong></p>
-					<p class="p2">▸ <a href="">Gracie Bialecki</a> - Account Manager, Sales</br>▸ <a href="">Meghan Fredrich</a> - Sales</br>▸ <a href="">Anders Crabo</a> - Equipment Tech & Sales</br>▸ Peter Martin - Operations</br>▸ Paul Cadena - Operations</br>▸ Jeremiah Brandenburg - Operations</p>
-					<p class="p2"><strong>Dogs:</strong></p>
-					<p class="p2">▸ Otto - Head of sleeping and licking faces</br>▸ Lola - Grand Queen of the Universe</br>▸ Ike - The Wild Card</p>
+					<p>Since the days of the truck, Joyride has grown to include a great group of people.</p>
+                    <p>&nbsp</p>
+					<p><strong>Founders:</strong></p>
+                    <ul>
+                        <li><a href="#">David Belanich</a></li>
+                        <li><a href="#">Adam Belanich</a></li>
+                        <li><a href="#">Noah Belanich</a></li>
+                    </ul>
+					<p><strong>Team:</strong></p>
+                    <ul>
+                        <li><a href="#">Gracie Bialecki</a> - VP: Sales</li>
+                        <li><a href="#">Meghan Fredrich</a> - Sales</li>
+                        <li><a href="#">Anders Crabo</a> - Equipment Tech & Sales</li>
+                        <li>Peter Martin - Operations</li>
+                        <li>Paul Cadena - Operations</li>
+                        <li>Jeremiah Brandenburg - Operations</li>
+                        <li><a href="#">Angel Chan</a> - Account Manager</li>
+                        <li><a href="#">Paul Toscano</a> - COO</li>
+                    </ul>
+					<p><strong>Dogs:</strong></p>
+                    <ul>
+                        <li>Otto - Head of sleeping and licking faces</li>
+                        <li>Lola - Grand Queen of the Universe</li>
+                        <li>Ike - The Wild Card</li>
+                    </ul>
                 </div>
                 <div class="content-right">
-                    <div id="div" class="div1">
-                	   <div class="overlay"></div>
-                        <p id="title" class="title1"><a href="#">SCHEDULE A TASTING</a></p>
-                        <div id="tHover" class="tHover1"><a href="#">Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!</a>
+                    <div class="content-item">
+                        <div class="overlay"></div>
+                        <p class="title">
+                            <a href="#">SCHEDULE A TASTING</a>
+                        </p>
+                        <div class="details hide">
+                            <a href="#">
+                                Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!
+                            </a>
                         </div>
-                        <div id="bHover" class="bHover1"><a>Schedule a Tasting</a></div>      
+                        <div class="action hide">
+                            <a>Schedule a Tasting</a>
+                        </div>      
                         <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
                     </div>
                 </div>
@@ -118,7 +140,7 @@
                         <p>Contact Us at <strong>917.670.3314</strong></p>
                     </div>
                     <p class="copyright">
-                        © Copyright 2012 Joyride Coffee Distributors. Site by
+                        &copy; Copyright 2012 Joyride Coffee Distributors. Site by
                         <a href="http://www.barrelny.com/">Barrel</a>
                     </p>
                 </div>
