--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,11 @@
                                 <a href="">About</a>
                                 <div class="icon-menu"></div>
                                 <ul class="about">
-                                    <li ><a href="about-ourstory">Our Story</a></li>
+                                    <li><a href="about-ourstory.html">Our Story</a></li>
                                     <li ><a href="about-ourteam.html">Our Team</a></li>
-                                    <li ><a href="#">Our Customers</a></li>
-                                    <li ><a href="#">Our Partners</a></li>
-                                    <li ><a href="#">Why Joyride Coffee</a></li>
+                                    <li ><a href="about-ourcustomers.html">Our Customers</a></li>
+                                    <li ><a href="about-ourpartners.html">Our Partners</a></li>
+                                    <li ><a href="about-whyjoyridecoffee.html">Why Joyride Coffee</a></li>
                                 </ul><!--menu cap 2-->
 
                             </li>
@@ -41,16 +41,16 @@
                                 <a href="#">Service</a>
                                 <div class="icon-menu"></div>
                                 <ul  class="service">
-                                    <li><a href="#">Catering</a></li>
-                                    <li><a href="#">Coffe Dilivery</a></li>
-                                    <li><a href="#">Equipment</a></li>
-                                    <li><a href="#">Service</a></li>
-                                    <li><a href="#">FAQ</a></li>
+                                    <li><a href="service-catering.html">Catering</a></li>
+                                    <li><a href="service-coffeedilivery.html">Coffee Dilivery</a></li>
+                                    <li><a href="service-equipment.html">Equipment</a></li>
+                                    <li><a href="service-service.html">Service</a></li>
+                                    <li><a href="service-faq.html">FAQ</a></li>
                                 </ul><!--menu cap 2-->
                             </li>
                             <li class="top-menu clickable"><a href="#">Coffee</a></li>
                             <li class="top-menu clickable"><a href="contact.html">Contact</a></li>
-                            <li class="top-menu clickable"><a href="#">Blog</a></li>
+                            <li class="top-menu clickable"><a href="blog.html">Blog</a></li>
                             <li class="top-menu clickable"><a href="order.html">Order Coffee</a></li>
                         </ul><!--menu cap 1-->
                     </nav>
@@ -62,9 +62,9 @@
             <div class="banner">
                 <img src="img/Joyride_Coffee_Contact.jpg">
             
-            <div class="text-banner wrapper">
-                <h2>Contact</h2>
-            </div>
+                <div class="text-banner wrapper">
+                    <h2>Contact</h2>
+                </div>
             </div>
 
             <div id="content" class="wrapper">
@@ -101,20 +101,20 @@
                 </div>
                 <div class="content-right">
                     <div class="content-item">
-                    <div class="overlay"></div>
-                    <p class="title">
-                        <a href="#">SCHEDULE A TASTING</a>
-                    </p>
-                    <div class="details hide">
-                        <a href="#">
-                            Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!
-                        </a>
+                        <div class="overlay"></div>
+                        <p class="title">
+                            <a href="#">SCHEDULE A TASTING</a>
+                        </p>
+                        <div class="details hide">
+                            <a href="#">
+                                Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!
+                            </a>
+                        </div>
+                        <div class="action hide">
+                            <a>Schedule a Tasting</a>
+                        </div>      
+                        <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
                     </div>
-                    <div class="action hide">
-                        <a>Schedule a Tasting</a>
-                    </div>      
-                    <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
-                </div>
                 </div>
             </div>
             
@@ -143,7 +143,7 @@
                         <p>Contact Us at <strong>917.670.3314</strong></p>
                     </div>
                     <p class="copyright">
-                        © Copyright 2012 Joyride Coffee Distributors. Site by
+                        &copy; Copyright 2012 Joyride Coffee Distributors. Site by
                         <a href="http://www.barrelny.com/">Barrel</a>
                     </p>
                 </div>
