--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                                 <ul class="about">
                                     <li><a href="about-ourstory.html">Our Story</a></li>
                                     <li ><a href="about-ourteam.html">Our Team</a></li>
-                                    <li ><a href="#">Our Customers</a></li>
-                                    <li ><a href="#">Our Partners</a></li>
-                                    <li ><a href="#">Why Joyride Coffee</a></li>
+                                    <li ><a href="about-ourcustomers.html">Our Customers</a></li>
+                                    <li ><a href="about-ourpartners.html">Our Partners</a></li>
+                                    <li ><a href="about-whyjoyridecoffee.html">Why Joyride Coffee</a></li>
                                 </ul><!--menu cap 2-->
 
                             </li>
@@ -41,16 +41,16 @@
                                 <a href="#">Service</a>
                                 <div class="icon-menu"></div>
                                 <ul  class="service">
-                                    <li><a href="#">Catering</a></li>
-                                    <li><a href="#">Coffe Dilivery</a></li>
-                                    <li><a href="#">Equipment</a></li>
-                                    <li><a href="#">Service</a></li>
-                                    <li><a href="#">FAQ</a></li>
+                                    <li><a href="service-catering.html">Catering</a></li>
+                                    <li><a href="service-coffeedilivery.html">Coffee Dilivery</a></li>
+                                    <li><a href="service-equipment.html">Equipment</a></li>
+                                    <li><a href="service-service.html">Service</a></li>
+                                    <li><a href="service-faq.html">FAQ</a></li>
                                 </ul><!--menu cap 2-->
                             </li>
                             <li class="top-menu"><a href="#">Coffee</a></li>
                             <li class="top-menu"><a href="contact.html">Contact</a></li>
-                            <li class="top-menu"><a href="#">Blog</a></li>
+                            <li class="top-menu"><a href="blog.html">Blog</a></li>
                             <li class="top-menu"><a href="order.html">Order Coffee</a></li>
                         </ul><!--menu cap 1-->
                     </nav>
@@ -165,7 +165,7 @@
                         <p>Contact Us at <strong>917.670.3314</strong></p>
                     </div>
                     <p class="copyright">
-                        © Copyright 2012 Joyride Coffee Distributors. Site by
+                        &copy; Copyright 2012 Joyride Coffee Distributors. Site by
                         <a href="http://www.barrelny.com/">Barrel</a>
                     </p>
                 </div>
