--- a/about-ourcustomers.html
+++ b/about-ourcustomers.html
@@ -3,15 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>New York Specialty Office | Joyride Coffe</title>
+        <title>Our Customer | Joyride Coffee</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" type="text/css" href="css/base.css">
         <link rel="stylesheet" type="text/css" href="css/about-ourcustomers.css">
         <script type="text/javascript" src="js/JQuery.js"></script>
-
-</head>
     </head>
     <body>
         <div id="container">
@@ -133,35 +131,37 @@
             </section>
 
             
-            <footer id="footer">
-                <div class=" content-footer wrapper">
-                    <div class="left">
-                        <ul>
-                            <li>
-                                <a href="#">Home</a>
-                            </li>
-                            <li>
-                                <a href="#">Jobs</a>
-                            </li>
-                            <li>
-                                <a href="#">Press</a>
-                            </li>
-                            <li class="social-media facebook">
-                                <a href="http://www.facebook.com/joyridecoffee">Facebook</a>
-                            </li>
-                            <li class="social-media twitter">
-                                <a href="https://twitter.com/#!/joyridecoffee">Twitter</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="right">
-                        <p>Contact Us at <strong>917.670.3314</strong></p>
+           <footer id="footer">
+                <div class=" content-footer wrapper ">
+                    <div class="footer-top clearfix">
+                        <div class="left clearfix">
+                            <ul>
+                                <li>
+                                    <a href="index.html">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#">Jobs</a>
+                                </li>
+                                <li>
+                                    <a href="#">Press</a>
+                                </li>
+                                <li class="social-media facebook">
+                                    <a href="http://www.facebook.com/joyridecoffee">Facebook</a>
+                                </li>
+                                <li class="social-media twitter">
+                                    <a href="https://twitter.com/#!/joyridecoffee">Twitter</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="right">
+                            <p>Contact Us at <strong>917.670.3314</strong></p>
+                        </div>
                     </div>
                     <p class="copyright">
                         &copy; Copyright 2012 Joyride Coffee Distributors. Site by
                         <a href="http://www.barrelny.com/">Barrel</a>
                     </p>
-                </div>
+                </div>    
             </footer><!-- /footer-->
         </div><!-- /container-->
 
