--- a/about-ourteam.html
+++ b/about-ourteam.html
@@ -8,14 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/about-ourteam.css">
-        <script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
-
-</head>
+        <link rel="stylesheet" type="text/css" href="css/about-base.css">
+        <script type="text/javascript" src="js/JQuery.js"></script>
     </head>
     <body>
         <div id="container">
-            <header id="header">
+            <header id="header" class="clearfix">
                 <div class="wrapper">
                     <h1 id="logo">
                         <a href="index.html">
@@ -57,94 +55,99 @@
                 </div><!-- /Wrapper--> 
                 <div class="sub-background"></div>  
             </header><!-- /header-->
-
-            <div class="slides-overlay"></div>
-            <div class="banner">
-                <img src="img/Joyride_Coffee_Our_Teamv4.jpg"/>
-                <div class="wrapper text-banner">
+            <div class="main-content">
+                <div class="slides-overlay"></div>
+                <div class="banner">
+                    <img src="img/Joyride_Coffee_Our_Teamv4.jpg"/>
+                    <div class="wrapper text-banner">
                     <h2>Our Team</h2>
                 </div>
-            </div> 
-            <div id="content" class="wrapper">
-                <div class="content-left">
-                    <h3>We are Joyride</h3>
-                    <p>Joyride is owned and operated by three brothers who drink far too much coffee.  Originally, they ran a mobile café dishing Stumptown coffee on the streets of Manhattan.  Customers often lamented the quality of their own office coffee, and an idea was born: providing amazing office coffee with café-quality equipment and active, engaged service.  Now, Joyride delivers freshly roasted coffee from amazing roasters to offices across the tri-state region.&nbsp</p>
-					</br>
-					<p>Since the days of the truck, Joyride has grown to include a great group of people.</p>
-                    <p>&nbsp</p>
-					<p><strong>Founders:</strong></p>
-                    <ul>
-                        <li><a href="#">David Belanich</a></li>
-                        <li><a href="#">Adam Belanich</a></li>
-                        <li><a href="#">Noah Belanich</a></li>
-                    </ul>
-					<p><strong>Team:</strong></p>
-                    <ul>
-                        <li><a href="#">Gracie Bialecki</a> - VP: Sales</li>
-                        <li><a href="#">Meghan Fredrich</a> - Sales</li>
-                        <li><a href="#">Anders Crabo</a> - Equipment Tech & Sales</li>
-                        <li>Peter Martin - Operations</li>
-                        <li>Paul Cadena - Operations</li>
-                        <li>Jeremiah Brandenburg - Operations</li>
-                        <li><a href="#">Angel Chan</a> - Account Manager</li>
-                        <li><a href="#">Paul Toscano</a> - COO</li>
-                    </ul>
-					<p><strong>Dogs:</strong></p>
-                    <ul>
-                        <li>Otto - Head of sleeping and licking faces</li>
-                        <li>Lola - Grand Queen of the Universe</li>
-                        <li>Ike - The Wild Card</li>
-                    </ul>
-                </div>
-                <div class="content-right">
-                    <div class="content-item">
-                        <div class="overlay"></div>
-                        <p class="title">
-                            <a href="#">SCHEDULE A TASTING</a>
-                        </p>
-                        <div class="details hide">
-                            <a href="#">
-                                Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!
-                            </a>
+                </div> 
+                <div id="content" class="wrapper clearfix">
+                    <div class="content-left">
+                        <h3>We are Joyride</h3>
+                        <p>Joyride is owned and operated by three brothers who drink far too much coffee.  Originally, they ran a mobile café dishing Stumptown coffee on the streets of Manhattan.  Customers often lamented the quality of their own office coffee, and an idea was born: providing amazing office coffee with café-quality equipment and active, engaged service.  Now, Joyride delivers freshly roasted coffee from amazing roasters to offices across the tri-state region.&nbsp</p>
+                        </br>
+                        <p>Since the days of the truck, Joyride has grown to include a great group of people.</p>
+                        <p>&nbsp</p>
+                        <p><strong>Founders:</strong></p>
+                        <ul>
+                            <li><a href="#">David Belanich</a></li>
+                            <li><a href="#">Adam Belanich</a></li>
+                            <li><a href="#">Noah Belanich</a></li>
+                        </ul>
+                        <p><strong>Team:</strong></p>
+                        <ul>
+                            <li><a href="#">Gracie Bialecki</a> - VP: Sales</li>
+                            <li><a href="#">Meghan Fredrich</a> - Sales</li>
+                            <li><a href="#">Anders Crabo</a> - Equipment Tech & Sales</li>
+                            <li>Peter Martin - Operations</li>
+                            <li>Paul Cadena - Operations</li>
+                            <li>Jeremiah Brandenburg - Operations</li>
+                            <li><a href="#">Angel Chan</a> - Account Manager</li>
+                            <li><a href="#">Paul Toscano</a> - COO</li>
+                        </ul>
+                        <p><strong>Dogs:</strong></p>
+                        <ul>
+                            <li>Otto - Head of sleeping and licking faces</li>
+                            <li>Lola - Grand Queen of the Universe</li>
+                            <li>Ike - The Wild Card</li>
+                        </ul>
+                    </div>
+
+
+                    <div class="content-right">
+                        <div class="content-item">
+                            <div class="overlay"></div>
+                            <p class="title">
+                                <a href="#">SCHEDULE A TASTING</a>
+                            </p>
+                            <div class="details hide">
+                                <a href="#">
+                                    Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!
+                                </a>
+                            </div>
+                            <div class="action hide">
+                                <a>Schedule a Tasting</a>
+                            </div>      
+                            <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
                         </div>
-                        <div class="action hide">
-                            <a>Schedule a Tasting</a>
-                        </div>      
-                        <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
                     </div>
                 </div>
             </div>
-            
             <footer id="footer">
-                <div class=" content-footer wrapper">
-                    <div class="left">
-                        <ul>
-                            <li>
-                                <a href="#">Home</a>
-                            </li>
-                            <li>
-                                <a href="#">Jobs</a>
-                            </li>
-                            <li>
-                                <a href="#">Press</a>
-                            </li>
-                            <li class="social-media facebook">
-                                <a href="http://www.facebook.com/joyridecoffee">Facebook</a>
-                            </li>
-                            <li class="social-media twitter">
-                                <a href="https://twitter.com/#!/joyridecoffee">Twitter</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="right">
-                        <p>Contact Us at <strong>917.670.3314</strong></p>
+                <div class=" content-footer wrapper ">
+                    <div class="footer-top clearfix">
+                        <div class="left clearfix">
+                            <ul>
+                                <li>
+                                    <a href="index.html">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#">Jobs</a>
+                                </li>
+                                <li>
+                                    <a href="#">Press</a>
+                                </li>
+                                <li class="social-media facebook">
+                                    <a href="http://www.facebook.com/joyridecoffee">Facebook</a>
+                                </li>
+                                <li class="social-media twitter">
+                                    <a href="https://twitter.com/#!/joyridecoffee">Twitter</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="right">
+                            <p>Contact Us at <strong>917.670.3314</strong></p>
+                        </div>
                     </div>
                     <p class="copyright">
                         &copy; Copyright 2012 Joyride Coffee Distributors. Site by
                         <a href="http://www.barrelny.com/">Barrel</a>
                     </p>
-                </div>
+                </div>    
             </footer><!-- /footer-->
+            
         </div><!-- /container-->
 
         <script type="text/javascript" src="js/index.js"></script>
