change width of body-text.main on blog page

--- a/blog-details.html
+++ b/blog-details.html
@@ -106,7 +106,7 @@
                                 </article>
                             </div>
                         </div>
-                        <div class="sidebar" style="height:1368px;">
+                        <div  id="blog-details" class="sidebar">
                             <div class="content">
                                 <div class="search sidebar-base">
                                     <h4>Search</h4>
