--- a/blog.html
+++ b/blog.html
@@ -212,7 +212,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="sidebar" style="height: 3719px;">
+                        <div class="sidebar">
                             <div class="content">
                                 <div class="search sidebar-base">
                                     <h4>Search</h4>
